# audio_aec

./: 0720日志.docx  local.properties  ppt模版.pptx  webrtc回声消除 ppt.pptx
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/example/wx/test/: ExampleInstrumentedTest.java
app/src/audio_data/: micin.pcm  speaker.pcm
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp  speex_jni.cpp  webrtc_jni.cpp
app/src/main/cpp/speex/: Makefile.in  jitter.c  mdf.c  preprocess.c  scal.c  speex_callbacks.c  speex_config_types.h  stereo.c
app/src/main/cpp/webrtc/: CMakeLists.txt  audiooptimize.cc  audiooptimize.h  common_types.cc  common_types.h  macroformat.h  testfilewriter.cpp  testfilewriter.h  thread.cpp  thread.h  webrtc.pro  webrtc.rc
app/src/main/cpp/webrtc/base/: buffer.h  checks.cc  event_tracer.cc  nethelpers.cc  pathutils.cc  win32filesystem.cc
app/src/main/cpp/webrtc/common_audio/: fir_filter_sse.cc
app/src/main/cpp/webrtc/common_audio/resampler/: sinc_resampler_sse.cc
app/src/main/cpp/webrtc/common_audio/signal_processing/include/: spl_inl.h
app/src/main/cpp/webrtc/modules/audio_coding/codecs/isac/main/source/: bandwidth_estimator.c
app/src/main/cpp/webrtc/modules/audio_processing/: audio_processing_impl.cc  audio_processing_impl.h  echo_cancellation_impl.cc
app/src/main/cpp/webrtc/modules/audio_processing/aec/: aec_core.cc  aec_core.h  aec_core_sse2.cc  aec_rdft_sse2.cc  echo_cancellation.cc  echo_cancellation.h
app/src/main/cpp/webrtc/modules/audio_processing/beamformer/: array_util.cc  array_util.h  nonlinear_beamformer.cc
app/src/main/cpp/webrtc/modules/audio_processing/include/: audio_processing.h
app/src/main/cpp/webrtc/modules/audio_processing/logging/: apm_data_dumper.cc  apm_data_dumper.h
app/src/main/cpp/webrtc/system_wrappers/include/: file_wrapper.h
app/src/main/cpp/webrtc/system_wrappers/source/: file_impl.cc
app/src/main/cpp/webrtc/system_wrappers/source/spreadsortlib/: spreadsort.hpp
app/src/main/java/com/example/wx/test/: AEC.java  AudioPlayer.java  AudioRecorder.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/example/wx/test/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
