cmake_minimum_required(VERSION 3.4.1)

set(CMAKE_CXX_STANDARD 11)
set(WEBRTC_SRC_PATH .)

include_directories(${WEBRTC_SRC_PATH}/base
                    ${WEBRTC_SRC_PATH}/common_audio/include
                    ${WEBRTC_SRC_PATH}
                    ${WEBRTC_SRC_PATH}/../
                    )

ADD_DEFINITIONS(-DANDROID
                -DWEBRTC_ANDROID
                -DWEBRTC_TARGET_PC
                -DWEBRTC_LINUX
                -DWEBRTC_POSIX
                -DWEBRTC_THREAD_RR
                -DDWEBRTC_ARCH_ARM
                -DWEBRTC_NS_FIXED
                -DWEBRTC_CLOCK_TYPE_REALTIME)

add_library(webrtc
            SHARED
            ${WEBRTC_SRC_PATH}/../webrtc_jni.cpp
            ${WEBRTC_SRC_PATH}/audiooptimize.cc
            ${WEBRTC_SRC_PATH}/base/asyncfile.cc
            ${WEBRTC_SRC_PATH}/base/asyncinvoker.cc
            ${WEBRTC_SRC_PATH}/base/asyncpacketsocket.cc
            ${WEBRTC_SRC_PATH}/base/asyncresolverinterface.cc
            ${WEBRTC_SRC_PATH}/base/asyncsocket.cc
            ${WEBRTC_SRC_PATH}/base/bandwidthsmoother.cc
            ${WEBRTC_SRC_PATH}/base/base64.cc
            ${WEBRTC_SRC_PATH}/base/common.cc
            ${WEBRTC_SRC_PATH}/base/crc32.cc
            ${WEBRTC_SRC_PATH}/base/cryptstring.cc
            ${WEBRTC_SRC_PATH}/base/dbus.cc
            ${WEBRTC_SRC_PATH}/base/filerotatingstream.cc
            ${WEBRTC_SRC_PATH}/base/fileutils.cc
            ${WEBRTC_SRC_PATH}/base/flags.cc
            ${WEBRTC_SRC_PATH}/base/ipaddress.cc
            ${WEBRTC_SRC_PATH}/base/libdbusglibsymboltable.cc
            ${WEBRTC_SRC_PATH}/base/logsinks.cc
            ${WEBRTC_SRC_PATH}/base/location.cc
            ${WEBRTC_SRC_PATH}/base/messagehandler.cc
            ${WEBRTC_SRC_PATH}/base/messagequeue.cc
            ${WEBRTC_SRC_PATH}/base/nethelpers.cc
            ${WEBRTC_SRC_PATH}/base/nullsocketserver.cc
            ${WEBRTC_SRC_PATH}/base/pathutils.cc
            ${WEBRTC_SRC_PATH}/base/physicalsocketserver.cc
            ${WEBRTC_SRC_PATH}/base/ratelimiter.cc
            ${WEBRTC_SRC_PATH}/base/sharedexclusivelock.cc
            ${WEBRTC_SRC_PATH}/base/signalthread.cc
            ${WEBRTC_SRC_PATH}/base/sigslot.cc
            ${WEBRTC_SRC_PATH}/base/socketaddress.cc
            ${WEBRTC_SRC_PATH}/base/stream.cc
            ${WEBRTC_SRC_PATH}/base/thread.cc
            ${WEBRTC_SRC_PATH}/base/timing.cc
            ${WEBRTC_SRC_PATH}/base/transformadapter.cc
            ${WEBRTC_SRC_PATH}/base/urlencode.cc
            ${WEBRTC_SRC_PATH}/base/versionparsing.cc
            ${WEBRTC_SRC_PATH}/base/criticalsection.cc
            ${WEBRTC_SRC_PATH}/base/timeutils.cc
            ${WEBRTC_SRC_PATH}/base/checks.cc
            ${WEBRTC_SRC_PATH}/base/stringutils.cc
            ${WEBRTC_SRC_PATH}/base/buffer.cc
            ${WEBRTC_SRC_PATH}/base/platform_file.cc
            ${WEBRTC_SRC_PATH}/base/stringencode.cc
            ${WEBRTC_SRC_PATH}/base/bytebuffer.cc
            ${WEBRTC_SRC_PATH}/base/platform_thread.cc
            ${WEBRTC_SRC_PATH}/base/event_tracer.cc
            ${WEBRTC_SRC_PATH}/base/systeminfo.cc
            ${WEBRTC_SRC_PATH}/base/thread_checker_impl.cc
            ${WEBRTC_SRC_PATH}/base/skl_logging.cc
            ${WEBRTC_SRC_PATH}/base/skl_event.cc
            ${WEBRTC_SRC_PATH}/common_audio/resampler/resampler.cc
            ${WEBRTC_SRC_PATH}/common_audio/vad/vad.cc
            ${WEBRTC_SRC_PATH}/common_audio/audio_converter.cc
            ${WEBRTC_SRC_PATH}/common_audio/audio_ring_buffer.cc
            ${WEBRTC_SRC_PATH}/common_audio/audio_util.cc
            ${WEBRTC_SRC_PATH}/common_audio/blocker.cc
            ${WEBRTC_SRC_PATH}/common_audio/fir_filter.cc
            ${WEBRTC_SRC_PATH}/common_audio/lapped_transform.cc
            ${WEBRTC_SRC_PATH}/common_audio/real_fourier.cc
            ${WEBRTC_SRC_PATH}/common_audio/real_fourier_ooura.cc
            ${WEBRTC_SRC_PATH}/common_audio/sparse_fir_filter.cc
            ${WEBRTC_SRC_PATH}/common_audio/wav_file.cc
            ${WEBRTC_SRC_PATH}/common_audio/wav_header.cc
            ${WEBRTC_SRC_PATH}/common_audio/window_generator.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/agc/agc.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/agc/agc_manager_direct.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/agc/loudness_histogram.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/agc/utility.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/beamformer/array_util.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/beamformer/covariance_matrix_generator.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/beamformer/nonlinear_beamformer.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/intelligibility/intelligibility_enhancer.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/intelligibility/intelligibility_utils.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/logging/apm_data_dumper.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/transient/moving_moments.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/transient/transient_detector.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/transient/transient_suppressor.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/transient/wpd_node.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/transient/wpd_tree.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/vad/gmm.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/vad/pitch_based_vad.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/vad/pitch_internal.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/vad/pole_zero_filter.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/vad/standalone_vad.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/vad/vad_audio_proc.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/vad/vad_circular_buffer.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/vad/voice_activity_detector.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/audio_buffer.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/audio_processing_impl.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/echo_cancellation_impl.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/echo_control_mobile_impl.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/gain_control_impl.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/gain_control_for_experimental_agc.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/high_pass_filter_impl.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/level_estimator_impl.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/level_controller/biquad_filter.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/level_controller/level_controller.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/level_controller/gain_applier.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/level_controller/gain_selector.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/level_controller/signal_classifier.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/level_controller/saturating_gain_estimator.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/level_controller/noise_level_estimator.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/level_controller/noise_spectrum_estimator.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/level_controller/peak_level_estimator.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/level_controller/down_sampler.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/noise_suppression_impl.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/rms_level.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/splitting_filter.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/three_band_filter_bank.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/typing_detection.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/voice_detection_impl.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/aec/aec_core.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/aec/aec_rdft.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/aec/aec_resampler.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/aec/echo_cancellation.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/aecm/aecm_core.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/aecm/aecm_core_c.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/aecm/echo_control_mobile.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/agc/legacy/analog_agc.c
            ${WEBRTC_SRC_PATH}/modules/audio_processing/agc/legacy/digital_agc.c
            ${WEBRTC_SRC_PATH}/modules/audio_processing/utility/delay_estimator.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/utility/delay_estimator_wrapper.cc
            ${WEBRTC_SRC_PATH}/modules/audio_processing/utility/block_mean_calculator.cc
            ${WEBRTC_SRC_PATH}/system_wrappers/source/aligned_malloc.cc
            ${WEBRTC_SRC_PATH}/system_wrappers/source/clock.cc
            ${WEBRTC_SRC_PATH}/system_wrappers/source/cpu_features.cc
            ${WEBRTC_SRC_PATH}/system_wrappers/source/cpu_info.cc
            ${WEBRTC_SRC_PATH}/system_wrappers/source/data_log.cc
            ${WEBRTC_SRC_PATH}/system_wrappers/source/data_log_c.cc
            ${WEBRTC_SRC_PATH}/system_wrappers/source/event.cc
            ${WEBRTC_SRC_PATH}/system_wrappers/source/file_impl.cc
            ${WEBRTC_SRC_PATH}/system_wrappers/source/logging.cc
            ${WEBRTC_SRC_PATH}/system_wrappers/source/rtp_to_ntp.cc
            ${WEBRTC_SRC_PATH}/system_wrappers/source/rw_lock.cc
            ${WEBRTC_SRC_PATH}/system_wrappers/source/rw_lock_posix.cc
            ${WEBRTC_SRC_PATH}/system_wrappers/source/sleep.cc
            ${WEBRTC_SRC_PATH}/system_wrappers/source/sort.cc
            ${WEBRTC_SRC_PATH}/system_wrappers/source/timestamp_extrapolator.cc
            ${WEBRTC_SRC_PATH}/system_wrappers/source/trace_impl.cc
            ${WEBRTC_SRC_PATH}/system_wrappers/source/trace_posix.cc
            ${WEBRTC_SRC_PATH}/system_wrappers/source/metrics_default.cc
            ${WEBRTC_SRC_PATH}/common_types.cc
            ${WEBRTC_SRC_PATH}/config.cc
            ${WEBRTC_SRC_PATH}/common_audio/signal_processing/spl_inl.c
            ${WEBRTC_SRC_PATH}/common_audio/signal_processing/auto_corr_to_refl_coef.c
            ${WEBRTC_SRC_PATH}/common_audio/signal_processing/auto_correlation.c
            ${WEBRTC_SRC_PATH}/common_audio/signal_processing/complex_bit_reverse.c
            ${WEBRTC_SRC_PATH}/common_audio/signal_processing/complex_fft.c
            ${WEBRTC_SRC_PATH}/common_audio/signal_processing/copy_set_operations.c
            ${WEBRTC_SRC_PATH}/common_audio/signal_processing/cross_correlation.c
            ${WEBRTC_SRC_PATH}/common_audio/signal_processing/division_operations.c
            ${WEBRTC_SRC_PATH}/common_audio/signal_processing/dot_product_with_scale.c
            ${WEBRTC_SRC_PATH}/common_audio/signal_processing/downsample_fast.c
            ${WEBRTC_SRC_PATH}/common_audio/signal_processing/energy.c
            ${WEBRTC_SRC_PATH}/common_audio/signal_processing/filter_ar.c
            ${WEBRTC_SRC_PATH}/common_audio/signal_processing/filter_ar_fast_q12.c
            ${WEBRTC_SRC_PATH}/common_audio/signal_processing/filter_ma_fast_q12.c
            ${WEBRTC_SRC_PATH}/common_audio/signal_processing/get_hanning_window.c
            ${WEBRTC_SRC_PATH}/common_audio/signal_processing/get_scaling_square.c
            ${WEBRTC_SRC_PATH}/common_audio/signal_processing/ilbc_specific_functions.c
            ${WEBRTC_SRC_PATH}/common_audio/signal_processing/levinson_durbin.c
            ${WEBRTC_SRC_PATH}/common_audio/signal_processing/lpc_to_refl_coef.c
            ${WEBRTC_SRC_PATH}/common_audio/signal_processing/min_max_operations.c
            ${WEBRTC_SRC_PATH}/common_audio/signal_processing/randomization_functions.c
            ${WEBRTC_SRC_PATH}/common_audio/signal_processing/real_fft.c
            ${WEBRTC_SRC_PATH}/common_audio/signal_processing/refl_coef_to_lpc.c
            ${WEBRTC_SRC_PATH}/common_audio/signal_processing/resample.c
            ${WEBRTC_SRC_PATH}/common_audio/signal_processing/resample_48khz.c
            ${WEBRTC_SRC_PATH}/common_audio/signal_processing/resample_by_2.c
            ${WEBRTC_SRC_PATH}/common_audio/signal_processing/resample_by_2_internal.c
            ${WEBRTC_SRC_PATH}/common_audio/signal_processing/resample_fractional.c
            ${WEBRTC_SRC_PATH}/common_audio/signal_processing/spl_init.c
            ${WEBRTC_SRC_PATH}/common_audio/signal_processing/spl_sqrt.c
            ${WEBRTC_SRC_PATH}/common_audio/signal_processing/spl_sqrt_floor.c
            ${WEBRTC_SRC_PATH}/common_audio/signal_processing/sqrt_of_one_minus_x_squared.c
            ${WEBRTC_SRC_PATH}/common_audio/signal_processing/vector_scaling_operations.c
            ${WEBRTC_SRC_PATH}/common_audio/vad/vad_core.c
            ${WEBRTC_SRC_PATH}/common_audio/vad/vad_filterbank.c
            ${WEBRTC_SRC_PATH}/common_audio/vad/vad_gmm.c
            ${WEBRTC_SRC_PATH}/common_audio/vad/vad_sp.c
            ${WEBRTC_SRC_PATH}/common_audio/vad/webrtc_vad.c
            ${WEBRTC_SRC_PATH}/common_audio/fft4g.c
            ${WEBRTC_SRC_PATH}/common_audio/ring_buffer.c
            ${WEBRTC_SRC_PATH}/common_audio/resampler/push_resampler.cc
            ${WEBRTC_SRC_PATH}/common_audio/resampler/push_sinc_resampler.cc
            ${WEBRTC_SRC_PATH}/common_audio/resampler/sinc_resampler.cc
            ${WEBRTC_SRC_PATH}/common_audio/channel_buffer.cc
            ${WEBRTC_SRC_PATH}/common_audio/signal_processing/skl_splitting_filter.c
            ${WEBRTC_SRC_PATH}/modules/audio_processing/ns/noise_suppression.c
            ${WEBRTC_SRC_PATH}/modules/audio_processing/ns/noise_suppression_x.c
            ${WEBRTC_SRC_PATH}/modules/audio_processing/ns/ns_core.c
            ${WEBRTC_SRC_PATH}/modules/audio_processing/ns/nsx_core.c
            ${WEBRTC_SRC_PATH}/modules/audio_processing/ns/nsx_core_c.c
            ${WEBRTC_SRC_PATH}/modules/utility/source/audio_frame_operations.cc
            ${WEBRTC_SRC_PATH}/modules/audio_coding/codecs/isac/main/source/audio_decoder_isac.cc
            ${WEBRTC_SRC_PATH}/modules/audio_coding/codecs/isac/main/source/audio_encoder_isac.cc
            ${WEBRTC_SRC_PATH}/modules/audio_coding/codecs/isac/main/source/arith_routines_hist.c
            ${WEBRTC_SRC_PATH}/modules/audio_coding/codecs/isac/main/source/arith_routines_logist.c
            ${WEBRTC_SRC_PATH}/modules/audio_coding/codecs/isac/main/source/arith_routines.c
            ${WEBRTC_SRC_PATH}/modules/audio_coding/codecs/isac/main/source/bandwidth_estimator.c
            ${WEBRTC_SRC_PATH}/modules/audio_coding/codecs/isac/main/source/crc.c
            ${WEBRTC_SRC_PATH}/modules/audio_coding/codecs/isac/main/source/decode_bwe.c
            ${WEBRTC_SRC_PATH}/modules/audio_coding/codecs/isac/main/source/decode.c
            ${WEBRTC_SRC_PATH}/modules/audio_coding/codecs/isac/main/source/encode_lpc_swb.c
            ${WEBRTC_SRC_PATH}/modules/audio_coding/codecs/isac/main/source/encode.c
            ${WEBRTC_SRC_PATH}/modules/audio_coding/codecs/isac/main/source/entropy_coding.c
            ${WEBRTC_SRC_PATH}/modules/audio_coding/codecs/isac/main/source/fft.c
            ${WEBRTC_SRC_PATH}/modules/audio_coding/codecs/isac/main/source/filter_functions.c
            ${WEBRTC_SRC_PATH}/modules/audio_coding/codecs/isac/main/source/filterbank_tables.c
            ${WEBRTC_SRC_PATH}/modules/audio_coding/codecs/isac/main/source/filterbanks.c
            ${WEBRTC_SRC_PATH}/modules/audio_coding/codecs/isac/main/source/intialize.c
            ${WEBRTC_SRC_PATH}/modules/audio_coding/codecs/isac/main/source/isac.c
            ${WEBRTC_SRC_PATH}/modules/audio_coding/codecs/isac/main/source/lattice.c
            ${WEBRTC_SRC_PATH}/modules/audio_coding/codecs/isac/main/source/lpc_analysis.c
            ${WEBRTC_SRC_PATH}/modules/audio_coding/codecs/isac/main/source/lpc_gain_swb_tables.c
            ${WEBRTC_SRC_PATH}/modules/audio_coding/codecs/isac/main/source/lpc_shape_swb12_tables.c
            ${WEBRTC_SRC_PATH}/modules/audio_coding/codecs/isac/main/source/lpc_shape_swb16_tables.c
            ${WEBRTC_SRC_PATH}/modules/audio_coding/codecs/isac/main/source/lpc_tables.c
            ${WEBRTC_SRC_PATH}/modules/audio_coding/codecs/isac/main/source/pitch_estimator.c
            ${WEBRTC_SRC_PATH}/modules/audio_coding/codecs/isac/main/source/pitch_filter.c
            ${WEBRTC_SRC_PATH}/modules/audio_coding/codecs/isac/main/source/pitch_gain_tables.c
            ${WEBRTC_SRC_PATH}/modules/audio_coding/codecs/isac/main/source/pitch_lag_tables.c
            ${WEBRTC_SRC_PATH}/modules/audio_coding/codecs/isac/main/source/spectrum_ar_model_tables.c
            ${WEBRTC_SRC_PATH}/modules/audio_coding/codecs/isac/main/source/transform.c
            ${WEBRTC_SRC_PATH}/modules/audio_coding/codecs/audio_decoder.cc
            ${WEBRTC_SRC_PATH}/modules/audio_coding/codecs/audio_encoder.cc
            ${WEBRTC_SRC_PATH}/modules/audio_coding/codecs/isac/locked_bandwidth_info.cc
            ${WEBRTC_SRC_PATH}/base/unixfilesystem.cc
            ${WEBRTC_SRC_PATH}/testfilewriter.cpp
        )

target_link_libraries(webrtc log)
